--- a/002 npm/2.2 proyecto npm/package.json
+++ b/002 npm/2.2 proyecto npm/package.json
@@ -4,7 +4,8 @@
   "description": "Esto es un proyecto de ejemplo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "auditar": "npm audit && node app.js"
   },
   "author": "Ponsiano De Loor",
   "license": "ISC",
